--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database-compat.js"></script>
 
   <style>
-    /* === 基本樣式（保留你原本的 UI） === */
     :root { color-scheme: light; }
     * { box-sizing: border-box; }
     body { font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Noto Sans TC",Arial;
@@ -19,6 +18,13 @@
     h1 { margin:0; color:#333; font-size:1.4rem; }
     main { padding:0 16px 96px; }
     h2 { color:#333; margin:16px 0 8px; font-size:1.1rem; }
+    .item { background:#fff; border:1px solid #e5e5e5; border-radius:12px;
+            padding:12px; margin:8px 0; box-shadow:0 2px 10px rgba(0,0,0,.04); }
+    .row { display:flex; align-items:center; gap:.6rem; flex-wrap:wrap; }
+    .name { font-weight:700; }
+    .price { color:#555; }
+    .qty { width:88px; }
+    .note { flex:1 1 220px; min-width:200px; }
 
     .checkout-bar {
       position:fixed; left:0; right:0; bottom:0; background:#fff; border-top:1px solid #e5e5e5;
@@ -48,50 +54,6 @@
     .success .code { font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
                      background:#f1f3f5; border:1px dashed #cbd5e1; border-radius:8px;
                      display:inline-block; padding:6px 10px; }
-
-    /* === 圖片格狀菜單 === */
-    .menu-toolbar{
-      display:flex; gap:8px; align-items:center; justify-content:space-between; margin:8px 0 10px;
-    }
-    .menu-toolbar .pager{ display:flex; gap:6px; align-items:center; }
-    .menu-grid{
-      display:grid;
-      grid-template-columns: repeat(2, 1fr); /* 手機：2 欄 */
-      gap:12px;
-    }
-    @media (min-width: 640px){ .menu-grid{ grid-template-columns: repeat(3, 1fr); } }
-    @media (min-width: 920px){ .menu-grid{ grid-template-columns: repeat(4, 1fr); } }
-
-    .card2{
-      background:#fff; border:1px solid #e5e5e5; border-radius:12px;
-      overflow:hidden; display:flex; flex-direction:column;
-      box-shadow:0 2px 10px rgba(0,0,0,.04);
-    }
-    .card2 .pic{
-      aspect-ratio: 4/3;
-      background:#f3f4f6;
-      display:flex; align-items:center; justify-content:center;
-      overflow:hidden;
-    }
-    .card2 .pic img{ width:100%; height:100%; object-fit:cover; }
-    .card2 .body{ padding:10px; display:flex; flex-direction:column; gap:6px; }
-    .card2 .name{ font-weight:700; line-height:1.2; min-height:2.4em; }
-    .card2 .price{ color:#334155; font-weight:800; }
-    .card2 .ops{ display:flex; align-items:center; gap:8px; }
-    .card2 .qtybox{
-      display:flex; align-items:center; gap:6px; margin-left:auto;
-    }
-    .card2 .qtybox button{
-      width:32px; height:32px; border-radius:8px; border:1px solid #d0d7de; background:#fff; cursor:pointer;
-    }
-    .card2 .qtybox input{
-      width:48px; text-align:center; padding:6px; border:1px solid #d0d7de; border-radius:8px;
-    }
-    .card2 .note{
-      width:100%; padding:7px 8px; border:1px dashed #cbd5e1; border-radius:10px; font-size:.9rem;
-    }
-    .btn-lite{ padding:6px 10px; border-radius:10px; border:1px solid #d0d7de; background:#fff; cursor:pointer; }
-    .btn-lite[disabled]{ opacity:.6; cursor:not-allowed; }
   </style>
 </head>
 <body>
@@ -160,7 +122,9 @@
 
     // ========= 開桌 session 檢查（重要） =========
     async function checkSession() {
-      if (!db) return true; // JSON/本地測試放行
+      // JSON 模式或本地測試時可放行（沒有 db）
+      if (!db) return true;
+
       try {
         const snap = await db.ref(`tables/${currentTable}/session`).once("value");
         const sess = snap.val();
@@ -217,147 +181,40 @@
       }
     }
 
-    // ==== 圖片菜單輔助設定 ====
-    const PAGE_SIZE = 8;              // 每頁幾個
-    let currentCategory = null;       // 目前品類
-    let currentPage = 1;              // 目前頁碼
-
-    function getImageUrl(item){
-      // 若 Firebase/menu_items 有 image 欄位就用；沒有就 fallback
-      return item.image || "images/placeholder.jpg";
-    }
-
-    // 建立數量 +/-
-    function qtyControlsHtml(id){
-      return `
-        <div class="qtybox" data-id="${id}">
-          <button type="button" class="btn-dec">−</button>
-          <input type="number" class="qty-input" id="qty-${id}" min="0" value="0" inputmode="numeric" />
-          <button type="button" class="btn-inc">＋</button>
-        </div>
-      `;
-    }
-
-    // ========= 渲染菜單（圖片卡片 + 分頁）=========
+    // ========= 渲染菜單 =========
     function renderMenu(raw){
       const menu = $("menu");
       menu.innerHTML = "";
-
-      // 依分類分組
       const grouped = {};
       Object.entries(raw).forEach(([id, item])=>{
         (grouped[item.category || "其他"] ||= []).push({ ...item, id });
       });
 
-      const categories = Object.keys(grouped);
-      if (!categories.length){
-        menu.innerHTML = `<div class="message err">沒有菜單資料</div>`;
-        return;
-      }
-      if (!currentCategory) currentCategory = categories[0];
-
-      // 工具列（分類 + 分頁）
-      const toolbar = document.createElement("div");
-      toolbar.className = "menu-toolbar";
-
-      // 分類下拉
-      const sel = document.createElement("select");
-      sel.className = "btn-lite";
-      categories.forEach(c=>{
-        const opt = document.createElement("option");
-        opt.value = c; opt.textContent = c;
-        if (c === currentCategory) opt.selected = true;
-        sel.appendChild(opt);
-      });
-      sel.onchange = () => { currentCategory = sel.value; currentPage = 1; renderMenu(state.menu); };
-
-      // 分頁計算
-      const allItems = grouped[currentCategory] || [];
-      const totalPages = Math.max(1, Math.ceil(allItems.length / PAGE_SIZE));
-      if (currentPage > totalPages) currentPage = totalPages;
-      const start = (currentPage - 1) * PAGE_SIZE;
-      const pageItems = allItems.slice(start, start + PAGE_SIZE);
-
-      // 分頁控制
-      const pager = document.createElement("div");
-      pager.className = "pager";
-      const btnPrev = document.createElement("button");
-      btnPrev.className = "btn-lite";
-      btnPrev.textContent = "上一頁";
-      btnPrev.disabled = currentPage <= 1;
-      btnPrev.onclick = () => { currentPage--; renderMenu(state.menu); };
-      const pageInfo = document.createElement("span");
-      pageInfo.textContent = `${currentPage} / ${totalPages}`;
-      const btnNext = document.createElement("button");
-      btnNext.className = "btn-lite";
-      btnNext.textContent = "下一頁";
-      btnNext.disabled = currentPage >= totalPages;
-      btnNext.onclick = () => { currentPage++; renderMenu(state.menu); };
-
-      pager.appendChild(btnPrev);
-      pager.appendChild(pageInfo);
-      pager.appendChild(btnNext);
-
-      toolbar.appendChild(sel);
-      toolbar.appendChild(pager);
-      menu.appendChild(toolbar);
-
-      // 卡片格狀
-      const grid = document.createElement("div");
-      grid.className = "menu-grid";
-
-      pageItems.forEach(item=>{
-        const card = document.createElement("div");
-        card.className = "card2";
-        card.innerHTML = `
-          <div class="pic">
-            <img src="${getImageUrl(item)}" alt="${item.name}" onerror="this.src='images/placeholder.jpg'">
-          </div>
-          <div class="body">
-            <div class="name">${item.name}</div>
-            <div class="ops">
-              <div class="price">＄${fmt.format(Number(item.price)||0)}</div>
-              ${qtyControlsHtml(item.id)}
+      Object.entries(grouped).forEach(([cat, items])=>{
+        const h = document.createElement("h2"); h.textContent = cat; menu.appendChild(h);
+        items.forEach(item=>{
+          const card = document.createElement("div");
+          card.className = "item";
+          card.innerHTML = `
+            <div class="row">
+              <span class="name">${item.name}</span>
+              <span class="price">＄${fmt.format(Number(item.price)||0)}</span>
+              <label>數量：
+                <input class="qty" type="number" inputmode="numeric" pattern="[0-9]*"
+                       min="0" value="0" id="qty-${item.id}">
+              </label>
+              ${item.enable_note ? `
+                <input class="note" type="text" id="note-${item.id}" placeholder="備註（可留空）">` : ""}
             </div>
-            ${item.enable_note ? `<input class="note" id="note-${item.id}" type="text" placeholder="備註（可留空）">` : ""}
-          </div>
-        `;
-        grid.appendChild(card);
+          `;
+          menu.appendChild(card);
+
+          const qtyEl = card.querySelector(`#qty-${item.id}`);
+          qtyEl.addEventListener("input", ()=>{ clampQty(qtyEl); updateTotal(); saveCart(); });
+          const noteEl = card.querySelector(`#note-${item.id}`);
+          if (noteEl) noteEl.addEventListener("change", saveCart);
+        });
       });
-      menu.appendChild(grid);
-
-      // 綁定事件：＋/－、手動輸入、備註
-      grid.querySelectorAll(".qtybox").forEach(box=>{
-        const id = box.dataset.id;
-        const input = box.querySelector(".qty-input");
-        const btnInc = box.querySelector(".btn-inc");
-        const btnDec = box.querySelector(".btn-dec");
-
-        // 還原暫存
-        const cachedAll = JSON.parse(localStorage.getItem(STORAGE_KEY) || "{}");
-        const cached = cachedAll[id];
-        if (cached && typeof cached.qty === "number") input.value = cached.qty;
-        const noteEl = $("note-"+id);
-        if (noteEl && cached && typeof cached.note === "string") noteEl.value = cached.note;
-
-        const onChange = ()=>{
-          let v = parseInt(input.value||"0",10);
-          if (isNaN(v) || v < 0) v = 0;
-          if (v > 99) v = 99;
-          input.value = v;
-          updateTotal();
-          saveCart();
-        };
-        btnInc.onclick = ()=>{ input.value = (parseInt(input.value||"0",10)||0) + 1; onChange(); };
-        btnDec.onclick = ()=>{ input.value = Math.max(0, (parseInt(input.value||"0",10)||0) - 1); onChange(); };
-        input.oninput = onChange;
-      });
-
-      grid.querySelectorAll(".note").forEach(n=>{
-        n.onchange = saveCart;
-      });
-
-      updateTotal();
     }
 
     function clampQty(el){
