--- a/index.html
+++ b/index.html
@@ -18,13 +18,32 @@
     h1 { margin:0; color:#333; font-size:1.4rem; }
     main { padding:0 16px 96px; }
     h2 { color:#333; margin:16px 0 8px; font-size:1.1rem; }
-    .item { background:#fff; border:1px solid #e5e5e5; border-radius:12px;
-            padding:12px; margin:8px 0; box-shadow:0 2px 10px rgba(0,0,0,.04); }
+
+    .item {
+      background:#fff; border:1px solid #e5e5e5; border-radius:12px;
+      padding:12px; margin:8px 0; box-shadow:0 2px 10px rgba(0,0,0,.04);
+    }
     .row { display:flex; align-items:center; gap:.6rem; flex-wrap:wrap; }
     .name { font-weight:700; }
     .price { color:#555; }
     .qty { width:88px; }
     .note { flex:1 1 220px; min-width:200px; }
+
+    /* 圖片區塊（新增：顯示商品圖片） */
+    .item .pic{
+      width:100%;
+      height:160px;
+      background:#f3f4f6;
+      border-radius:10px;
+      overflow:hidden;
+      margin-bottom:8px;
+    }
+    .item .pic img{
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      display:block;
+    }
 
     .checkout-bar {
       position:fixed; left:0; right:0; bottom:0; background:#fff; border-top:1px solid #e5e5e5;
@@ -68,7 +87,6 @@
       <p>您的訂單編號：</p>
       <p class="code" id="orderId">—</p>
       <p style="margin-top:8px;">請保持頁面或出示此畫面給服務人員。</p>
-      <!-- 回到點餐並保留當前 ?table= -->
       <button class="primary" onclick="location.href = location.pathname + location.search">回到點餐</button>
     </section>
   </main>
@@ -125,14 +143,13 @@
     }
 
     // ========= 菜單來源控制 =========
-    const MENU_VER = "2025-08-12-01";                 // 換版本避免快取
+    const MENU_VER = "2025-08-12-02";                 // 換版本避免快取
     const MENU_URL = `menu_items.json?v=${MENU_VER}`; // 避免快取
     const sourceOverride = qs.get("source");          // ?source=json 可強制用 JSON
 
-    // ========= 開桌 session 檢查（重要） =========
+    // ========= 開桌 session 檢查 =========
     async function checkSession() {
       if (!db) return true; // JSON 模式放行
-
       try {
         const snap = await db.ref(`tables/${currentTable}/session`).once("value");
         const sess = snap.val();
@@ -190,7 +207,7 @@
       }
     }
 
-    // ========= 渲染菜單（清單版） =========
+    // ========= 渲染菜單（清單版＋圖片） =========
     function renderMenu(raw){
       const menu = $("menu");
       menu.innerHTML = "";
@@ -205,8 +222,13 @@
           const card = document.createElement("div");
           card.className = "item";
           card.innerHTML = `
+            ${item.img ? `
+              <div class="pic">
+                <img src="${item.img}" alt="${item.name||''}"
+                     onerror="this.parentElement.style.display='none'">
+              </div>` : ``}
             <div class="row">
-              <span class="name">${item.name}</span>
+              <span class="name">${item.name || ""}</span>
               <span class="price">＄${fmt.format(Number(item.price)||0)}</span>
               <label>數量：
                 <input class="qty" type="number" inputmode="numeric" pattern="[0-9]*"
