--- a/index.html
+++ b/index.html
@@ -12,67 +12,81 @@
   <style>
     :root { color-scheme: light; }
     * { box-sizing: border-box; }
-    body { font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Noto Sans TC",Arial;
-           margin:0; background:#f7f7f7; }
+    body {
+      font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Noto Sans TC",Arial;
+      margin:0; background:#f7f7f7;
+    }
     header { padding:16px; position:sticky; top:0; background:#f7f7f7; z-index:5; }
     h1 { margin:0; color:#333; font-size:1.4rem; }
     main { padding:0 16px 96px; }
     h2 { color:#333; margin:16px 0 8px; font-size:1.1rem; }
 
-    .item {
+    .item{
       background:#fff; border:1px solid #e5e5e5; border-radius:12px;
       padding:12px; margin:8px 0; box-shadow:0 2px 10px rgba(0,0,0,.04);
     }
+
+    /* ✅ 圖片：完整顯示、不裁切、置中，並限制最大高度避免過長 */
+    .item .pic{
+      width:100%;
+      background:#f3f4f6;
+      border-radius:10px;
+      overflow:hidden;
+      margin-bottom:8px;
+
+      /* 讓圖片可置中且保持容器一致感 */
+      display:flex;
+      align-items:center;
+      justify-content:center;
+
+      /* 你可以調整這兩個值以控制卡片中圖片區域的高度範圍 */
+      min-height: 120px;
+      max-height: 220px;
+    }
+    .item .pic img{
+      max-width:100%;
+      max-height:100%;
+      width:auto;
+      height:auto;
+      object-fit: contain;     /* 關鍵：保持比例且不裁切 */
+      display:block;
+    }
+
     .row { display:flex; align-items:center; gap:.6rem; flex-wrap:wrap; }
     .name { font-weight:700; }
     .price { color:#555; }
     .qty { width:88px; }
     .note { flex:1 1 220px; min-width:200px; }
 
-    /* 圖片區塊（新增：顯示商品圖片） */
-    .item .pic{
-      width:100%;
-      height:160px;
-      background:#f3f4f6;
-      border-radius:10px;
-      overflow:hidden;
-      margin-bottom:8px;
-    }
-    .item .pic img{
-      width:100%;
-      height:100%;
-      object-fit:cover;
-      display:block;
-    }
-
-    .checkout-bar {
+    .checkout-bar{
       position:fixed; left:0; right:0; bottom:0; background:#fff; border-top:1px solid #e5e5e5;
       padding:10px 12px; display:flex; align-items:center; gap:12px; z-index:10;
     }
     .checkout-bar .sum { font-weight:900; font-size:1.1rem; }
     .checkout-bar .muted { color:#666; font-size:.9rem; }
-    button.primary {
+    button.primary{
       margin-left:auto; padding:.75rem 1.2rem; font-size:1rem; font-weight:700;
       background:#0d6efd; color:#fff; border:0; border-radius:10px; cursor:pointer;
     }
-    button.primary[disabled] { opacity:.6; cursor:not-allowed; }
+    button.primary[disabled]{ opacity:.6; cursor:not-allowed; }
 
     .message { padding:10px 16px; min-height:1.25rem; font-weight:700; }
     .ok { color:#0a7d39; } .err { color:#b3261e; } .info { color:#0b5ed7; }
 
-    .toast {
+    .toast{
       position:fixed; left:50%; bottom:80px; transform:translateX(-50%);
       background:rgba(0,0,0,.85); color:#fff; padding:10px 14px; border-radius:10px;
-      font-size:.95rem; opacity:0; pointer-events:none; transition:opacity .25s;
-      z-index:100;
+      font-size:.95rem; opacity:0; pointer-events:none; transition:opacity .25s; z-index:100;
     }
-    .toast.show { opacity:1; }
+    .toast.show{ opacity:1; }
 
-    .success { display:none; padding:24px; text-align:center; }
-    .success h3 { margin:0 0 8px; }
-    .success .code { font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
-                     background:#f1f3f5; border:1px dashed #cbd5e1; border-radius:8px;
-                     display:inline-block; padding:6px 10px; }
+    .success{ display:none; padding:24px; text-align:center; }
+    .success h3{ margin:0 0 8px; }
+    .success .code{
+      font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
+      background:#f1f3f5; border:1px dashed #cbd5e1; border-radius:8px;
+      display:inline-block; padding:6px 10px;
+    }
   </style>
 </head>
 <body>
@@ -103,7 +117,7 @@
     // ========= 基本工具 =========
     const $ = (id) => document.getElementById(id);
     const fmt = new Intl.NumberFormat('zh-TW');
-    function showToast(text, ms=1600) {
+    function showToast(text, ms=1600){
       const t = $("toast"); t.textContent = text; t.classList.add("show");
       setTimeout(()=> t.classList.remove("show"), ms);
     }
@@ -134,7 +148,7 @@
     catch(e){ console.warn("Firebase 初始化失敗，改用 JSON 備援：", e); }
 
     // ========= 資料正規化：把 {menu_items:{...}} 攤平成 {...} =========
-    function normalizeMenuData(data) {
+    function normalizeMenuData(data){
       if (data && typeof data === "object" &&
           data.menu_items && typeof data.menu_items === "object") {
         return data.menu_items;
@@ -143,17 +157,17 @@
     }
 
     // ========= 菜單來源控制 =========
-    const MENU_VER = "2025-08-12-02";                 // 換版本避免快取
+    const MENU_VER = "2025-08-12-03";                 // 換版本避免快取
     const MENU_URL = `menu_items.json?v=${MENU_VER}`; // 避免快取
     const sourceOverride = qs.get("source");          // ?source=json 可強制用 JSON
 
     // ========= 開桌 session 檢查 =========
-    async function checkSession() {
+    async function checkSession(){
       if (!db) return true; // JSON 模式放行
-      try {
+      try{
         const snap = await db.ref(`tables/${currentTable}/session`).once("value");
         const sess = snap.val();
-        if (!sess || !sess.id || !sess.expiresAt || Number(sess.expiresAt) <= Date.now()) {
+        if (!sess || !sess.id || !sess.expiresAt || Number(sess.expiresAt) <= Date.now()){
           $("msg").className = "message err";
           $("msg").textContent = "此桌尚未開桌或已結帳，請洽服務人員。";
           $("submitBtn").disabled = true;
@@ -161,7 +175,7 @@
         }
         ACTIVE_SESSION_ID = String(sess.id);
         return true;
-      } catch (e) {
+      }catch(e){
         $("msg").className = "message err";
         $("msg").textContent = "讀取桌況失敗，請稍後重試或洽服務人員。";
         $("submitBtn").disabled = true;
@@ -170,15 +184,15 @@
     }
 
     // ========= 讀菜單（Firebase 優先，失敗/覆蓋則用 JSON）=========
-    async function loadMenu() {
+    async function loadMenu(){
       $("msg").className = "message info";
       $("msg").textContent = "正在載入菜單…";
 
-      if (db && sourceOverride !== "json") {
-        try {
+      if (db && sourceOverride !== "json"){
+        try{
           const snap = await db.ref("menu_items").once("value");
           const data = normalizeMenuData(snap.val());
-          if (data && Object.keys(data).length) {
+          if (data && Object.keys(data).length){
             state.source = "firebase";
             state.menu = data;
             renderMenu(data);
@@ -187,13 +201,13 @@
             $("msg").textContent = "";
             return;
           }
-        } catch(err){ console.warn("讀取 Firebase 失敗：", err); }
+        }catch(err){ console.warn("讀取 Firebase 失敗：", err); }
       }
 
-      try {
+      try{
         const res = await fetch(MENU_URL, { cache: "no-store" });
         if(!res.ok) throw new Error(`HTTP ${res.status}`);
-        const raw = await res.json();
+        const raw  = await res.json();
         const data = normalizeMenuData(raw);
         state.source = "json";
         state.menu = data;
@@ -201,7 +215,7 @@
         restoreCart();
         updateTotal();
         $("msg").textContent = "（目前為離線/JSON 模式）";
-      } catch(err){
+      }catch(err){
         $("msg").className = "message err";
         $("msg").textContent = `⚠️ 無法取得菜單：${err.message}`;
       }
@@ -217,7 +231,10 @@
       });
 
       Object.entries(grouped).forEach(([cat, items])=>{
-        const h = document.createElement("h2"); h.textContent = cat; menu.appendChild(h);
+        const h = document.createElement("h2");
+        h.textContent = cat;
+        menu.appendChild(h);
+
         items.forEach(item=>{
           const card = document.createElement("div");
           card.className = "item";
@@ -225,6 +242,7 @@
             ${item.img ? `
               <div class="pic">
                 <img src="${item.img}" alt="${item.name||''}"
+                     loading="lazy"
                      onerror="this.parentElement.style.display='none'">
               </div>` : ``}
             <div class="row">
@@ -240,7 +258,7 @@
           `;
           menu.appendChild(card);
 
-          const qtyEl = card.querySelector(`#qty-${item.id}`);
+          const qtyEl  = card.querySelector(`#qty-${item.id}`);
           qtyEl.addEventListener("input", ()=>{ clampQty(qtyEl); updateTotal(); saveCart(); });
           const noteEl = card.querySelector(`#note-${item.id}`);
           if (noteEl) noteEl.addEventListener("change", saveCart);
@@ -355,7 +373,7 @@
           showToast("送出失敗，請重試");
           state.submitting = false; btn.textContent = oldText; updateTotal();
         }
-      } else {
+      }else{
         console.log("（JSON 模式）僅前端記錄：", order);
         $("msg").className = "message ok";
         $("msg").textContent = "✅ 已記錄您的選擇（目前為離線/JSON 模式）";
