--- a/index.html
+++ b/index.html
@@ -26,37 +26,42 @@
       padding:12px; margin:8px 0; box-shadow:0 2px 10px rgba(0,0,0,.04);
     }
 
-    /* ✅ 圖片：完整顯示、不裁切、置中，並限制最大高度避免過長 */
+    /* ✅ 圖片：完整顯示、不裁切、置中，限制高度避免過長 */
     .item .pic{
       width:100%;
       background:#f3f4f6;
       border-radius:10px;
       overflow:hidden;
       margin-bottom:8px;
-
-      /* 讓圖片可置中且保持容器一致感 */
-      display:flex;
-      align-items:center;
-      justify-content:center;
-
-      /* 你可以調整這兩個值以控制卡片中圖片區域的高度範圍 */
-      min-height: 420px;
-      max-height: 120px;
+      display:flex; align-items:center; justify-content:center;
+      min-height:120px;   /* 建議最小高度 */
+      max-height:420px;   /* 建議最大高度 */
     }
     .item .pic img{
       max-width:100%;
       max-height:100%;
-      width:auto;
-      height:auto;
-      object-fit: contain;     /* 關鍵：保持比例且不裁切 */
+      width:auto; height:auto;
+      object-fit:contain;   /* 保持比例不裁切 */
       display:block;
     }
 
     .row { display:flex; align-items:center; gap:.6rem; flex-wrap:wrap; }
     .name { font-weight:700; }
     .price { color:#555; }
-    .qty { width:88px; }
     .note { flex:1 1 220px; min-width:200px; }
+
+    /* ✅ 數量加減樣式 */
+    .qtybox{
+      display:flex; align-items:center; gap:8px; margin-left:auto;
+    }
+    .qtybox .btn{
+      width:36px; height:36px; border-radius:10px;
+      border:1px solid #d0d7de; background:#fff; cursor:pointer;
+      font-size:20px; line-height:1;
+      display:flex; align-items:center; justify-content:center;
+    }
+    .qtybox .btn:active{ transform:scale(0.98); }
+    .qtybox .qtydisp{ min-width:28px; text-align:center; font-weight:700; }
 
     .checkout-bar{
       position:fixed; left:0; right:0; bottom:0; background:#fff; border-top:1px solid #e5e5e5;
@@ -157,7 +162,7 @@
     }
 
     // ========= 菜單來源控制 =========
-    const MENU_VER = "2025-08-12-03";                 // 換版本避免快取
+    const MENU_VER = "2025-08-13-01";                 // 換版本避免快取
     const MENU_URL = `menu_items.json?v=${MENU_VER}`; // 避免快取
     const sourceOverride = qs.get("source");          // ?source=json 可強制用 JSON
 
@@ -221,7 +226,19 @@
       }
     }
 
-    // ========= 渲染菜單（清單版＋圖片） =========
+    /* ========= 數量工具 ========= */
+    function getQty(id){
+      return parseInt((document.getElementById(`qty-${id}`)?.value)||"0",10) || 0;
+    }
+    function setQty(id, v){
+      const val = Math.max(0, Math.min(99, parseInt(v,10)||0)); // 上限 99 可調
+      const hidden = document.getElementById(`qty-${id}`);
+      const disp   = document.getElementById(`qtdis-${id}`);
+      if (hidden) hidden.value = val;
+      if (disp)   disp.textContent = val;
+    }
+
+    // ========= 渲染菜單（清單版＋圖片＋加減鈕） =========
     function renderMenu(raw){
       const menu = $("menu");
       menu.innerHTML = "";
@@ -248,38 +265,53 @@
             <div class="row">
               <span class="name">${item.name || ""}</span>
               <span class="price">＄${fmt.format(Number(item.price)||0)}</span>
-              <label>數量：
-                <input class="qty" type="number" inputmode="numeric" pattern="[0-9]*"
-                       min="0" value="0" id="qty-${item.id}">
-              </label>
+
+              <!-- ✅ 數量加減 -->
+              <div class="qtybox" data-id="${item.id}">
+                <button class="btn minus" type="button" data-id="${item.id}" aria-label="減">−</button>
+                <span class="qtydisp" id="qtdis-${item.id}">0</span>
+                <button class="btn plus"  type="button" data-id="${item.id}" aria-label="加">＋</button>
+              </div>
+
               ${item.enable_note ? `
                 <input class="note" type="text" id="note-${item.id}" placeholder="備註（可留空）">` : ""}
             </div>
+
+            <!-- 隱藏的實際數量欄位，讓其餘流程沿用原本讀取邏輯 -->
+            <input type="hidden" id="qty-${item.id}" value="0">
           `;
           menu.appendChild(card);
-
-          const qtyEl  = card.querySelector(`#qty-${item.id}`);
-          qtyEl.addEventListener("input", ()=>{ clampQty(qtyEl); updateTotal(); saveCart(); });
-          const noteEl = card.querySelector(`#note-${item.id}`);
-          if (noteEl) noteEl.addEventListener("change", saveCart);
         });
       });
-    }
 
-    function clampQty(el){
-      const v = parseInt(el.value || "0", 10);
-      if (isNaN(v) || v < 0) el.value = 0;
+      // 綁定 + / - 事件
+      menu.querySelectorAll(".qtybox .plus").forEach(btn=>{
+        btn.onclick = () => {
+          const id = btn.dataset.id;
+          setQty(id, getQty(id) + 1);
+          updateTotal(); saveCart();
+        };
+      });
+      menu.querySelectorAll(".qtybox .minus").forEach(btn=>{
+        btn.onclick = () => {
+          const id = btn.dataset.id;
+          setQty(id, Math.max(0, getQty(id) - 1));
+          updateTotal(); saveCart();
+        };
+      });
+
+      // 備註改變時儲存
+      menu.querySelectorAll("input.note").forEach(n => {
+        n.addEventListener("change", saveCart);
+      });
     }
 
     // ========= 暫存（依桌號分開）=========
     function saveCart(){
       const data = {};
       Object.keys(state.menu).forEach(id=>{
-        const qEl = $(`qty-${id}`);
-        const nEl = $(`note-${id}`);
-        if (!qEl) return;
-        const qty = parseInt(qEl.value||"0",10)||0;
-        const note = nEl ? (nEl.value||"") : "";
+        const qty  = getQty(id);
+        const note = $(`note-${id}`)?.value || "";
         if (qty>0 || note) data[id] = { qty, note };
       });
       localStorage.setItem(STORAGE_KEY, JSON.stringify(data));
@@ -291,7 +323,7 @@
         if(!raw) return;
         const cart = JSON.parse(raw);
         Object.entries(cart).forEach(([id, {qty, note}])=>{
-          const qEl = $(`qty-${id}`); if (qEl) qEl.value = qty;
+          setQty(id, qty);
           const nEl = $(`note-${id}`); if (nEl && note) nEl.value = note;
         });
       }catch{}
@@ -301,7 +333,7 @@
     function calcTotal(){
       let total = 0;
       Object.keys(state.menu).forEach(id=>{
-        const q = parseInt(($(`qty-${id}`)?.value)||"0",10) || 0;
+        const q = getQty(id);
         if (q>0) total += (Number(state.menu[id].price)||0) * q;
       });
       return total;
@@ -311,10 +343,7 @@
     function updateTotal(){
       const total = calcTotal();
       let count = 0;
-      Object.keys(state.menu).forEach(id=>{
-        const q = parseInt(($(`qty-${id}`)?.value)||"0",10) || 0;
-        count += q;
-      });
+      Object.keys(state.menu).forEach(id=>{ count += getQty(id); });
       $("total").textContent = `合計金額：$${fmt.format(total)}${count?`（${count} 項）`:""}`;
       $("submitBtn").disabled = (count === 0) || state.submitting;
     }
@@ -326,7 +355,7 @@
 
       const items = [];
       Object.keys(state.menu).forEach(id=>{
-        const q = parseInt(($(`qty-${id}`)?.value)||"0",10) || 0;
+        const q = getQty(id);
         if (q>0){
           const note = $(`note-${id}`)?.value?.trim() || "";
           items.push({
