--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
       margin:0; background:#f7f7f7;
     }
     header { padding:16px; position:sticky; top:0; background:#f7f7f7; z-index:5; }
-    h1 { margin:0; color:#333; font-size:1.4rem; }
+    h1 { margin:0; color:#333; font-size:1.5rem; }          /* 標題稍微放大 */
     main { padding:0 16px 96px; }
-    h2 { color:#333; margin:16px 0 8px; font-size:1.1rem; }
+    h2 { color:#333; margin:16px 0 8px; font-size:1.15rem; }
 
     .item{
       background:#fff; border:1px solid #e5e5e5; border-radius:12px;
       padding:12px; margin:8px 0; box-shadow:0 2px 10px rgba(0,0,0,.04);
     }
 
-    /* ✅ 圖片：完整顯示、不裁切、置中，限制高度避免過長 */
+    /* 圖片：完整顯示、不裁切、置中，限制高度避免過長 */
     .item .pic{
       width:100%;
       background:#f3f4f6;
@@ -34,44 +34,55 @@
       overflow:hidden;
       margin-bottom:8px;
       display:flex; align-items:center; justify-content:center;
-      min-height:120px;   /* 建議最小高度 */
-      max-height:420px;   /* 建議最大高度 */
+      min-height:120px;
+      max-height:420px;
     }
     .item .pic img{
       max-width:100%;
       max-height:100%;
       width:auto; height:auto;
-      object-fit:contain;   /* 保持比例不裁切 */
+      object-fit:contain;
       display:block;
     }
 
     .row { display:flex; align-items:center; gap:.6rem; flex-wrap:wrap; }
-    .name { font-weight:700; }
-    .price { color:#555; }
-    .note { flex:1 1 220px; min-width:200px; }
 
-    /* ✅ 數量加減樣式 */
+    /* ✅ 放大：品名與價格 */
+    .name { font-weight:700; font-size:1.35rem; }
+    .price { color:#555; font-size:1.2rem; }
+
+    .note {
+      flex:1 1 220px; min-width:200px;
+      font-size:1.05rem;                 /* 備註也稍微放大 */
+    }
+
+    /* ✅ 數量加減樣式：44×44 觸控尺寸 */
     .qtybox{
-      display:flex; align-items:center; gap:8px; margin-left:auto;
+      display:flex; align-items:center; gap:10px; margin-left:auto;
     }
     .qtybox .btn{
-      width:36px; height:36px; border-radius:10px;
+      width:44px; height:44px;           /* 放大按鈕 */
+      border-radius:12px;
       border:1px solid #d0d7de; background:#fff; cursor:pointer;
-      font-size:20px; line-height:1;
+      font-size:1.6rem; line-height:1;   /* 放大 + / − 字 */
       display:flex; align-items:center; justify-content:center;
+      -webkit-tap-highlight-color: transparent;
     }
     .qtybox .btn:active{ transform:scale(0.98); }
-    .qtybox .qtydisp{ min-width:28px; text-align:center; font-weight:700; }
+    .qtybox .qtydisp{
+      min-width:40px; text-align:center; font-weight:800;
+      font-size:1.4rem;                  /* 放大數字 */
+    }
 
     .checkout-bar{
       position:fixed; left:0; right:0; bottom:0; background:#fff; border-top:1px solid #e5e5e5;
-      padding:10px 12px; display:flex; align-items:center; gap:12px; z-index:10;
+      padding:12px; display:flex; align-items:center; gap:12px; z-index:10;
     }
-    .checkout-bar .sum { font-weight:900; font-size:1.1rem; }
-    .checkout-bar .muted { color:#666; font-size:.9rem; }
+    .checkout-bar .sum { font-weight:900; font-size:1.2rem; }   /* 合計字體加大 */
+    .checkout-bar .muted { color:#666; font-size:1rem; }
     button.primary{
-      margin-left:auto; padding:.75rem 1.2rem; font-size:1rem; font-weight:700;
-      background:#0d6efd; color:#fff; border:0; border-radius:10px; cursor:pointer;
+      margin-left:auto; padding:.85rem 1.25rem; font-size:1.1rem; font-weight:800;
+      background:#0d6efd; color:#fff; border:0; border-radius:12px; cursor:pointer;
     }
     button.primary[disabled]{ opacity:.6; cursor:not-allowed; }
 
@@ -81,7 +92,7 @@
     .toast{
       position:fixed; left:50%; bottom:80px; transform:translateX(-50%);
       background:rgba(0,0,0,.85); color:#fff; padding:10px 14px; border-radius:10px;
-      font-size:.95rem; opacity:0; pointer-events:none; transition:opacity .25s; z-index:100;
+      font-size:1rem; opacity:0; pointer-events:none; transition:opacity .25s; z-index:100;
     }
     .toast.show{ opacity:1; }
 
@@ -266,7 +277,7 @@
               <span class="name">${item.name || ""}</span>
               <span class="price">＄${fmt.format(Number(item.price)||0)}</span>
 
-              <!-- ✅ 數量加減 -->
+              <!-- 數量加減 -->
               <div class="qtybox" data-id="${item.id}">
                 <button class="btn minus" type="button" data-id="${item.id}" aria-label="減">−</button>
                 <span class="qtydisp" id="qtdis-${item.id}">0</span>
