--- a/admin.html
+++ b/admin.html
@@ -105,10 +105,10 @@ main{
       <label>狀態篩選：
         <select id="filter">
           <option value="all">全部</option>
-          <option value="new">new</option>
-          <option value="preparing">preparing</option>
-          <option value="served">served</option>
-          <option value="paid">paid</option>
+          <option value="new">新訂單</option>
+          <option value="preparing">準備中</option>
+          <option value="served">服務</option>
+          <option value="paid">付款</option>
         </select>
       </label>
       <span id="info" class="tag muted"></span>
@@ -158,7 +158,7 @@ main{
     const statusFlow = ["new","preparing","served","paid"];
 
     // ===== 桌位按鈕面板（10 桌） =====
-    const NUM_TABLES = 10;                         // ← 想要幾桌改這裡
+    const NUM_TABLES = 20;                         // ← 想要幾桌改這裡
     const DEFAULT_MINUTES = 180;
     const tableGrid = $("tableGrid");
     const openMinutesEl = $("openMinutes");
