--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>點餐系統</title>
+  <title>三鼎巧味點餐系統</title>
 
   <!-- 禁止快取，更新樣式時比較不會卡住 -->
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
