--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <style>
     :root{
       color-scheme: light;
-      --bg:#f3efe7;            /* 米色底 */
+      --bg:#ffa500;            /* 米色底 */
       --card:#fff;             /* 卡片白 */
       --ink:#1f2937;           /* 文字 */
       --muted:#6b7280;
