--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     :root{
       color-scheme: light;
       --bg:#ffa500;            /* 米色底 */
-      --card:#fff;             /* 卡片白 */
+      --card:#ffe5b4;             /* 卡片白 */
       --ink:#1f2937;           /* 文字 */
       --muted:#6b7280;
       --brand:#0f1b2d;         /* 深藍標頭 */
