--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     :root{
       color-scheme: light;
       --bg:#ffa500;            /* 米色底 */
-      --card:#ffe5b4;             /* 卡片白 */
+      --card:#fff;             /* 卡片白 */
       --ink:#1f2937;           /* 文字 */
       --muted:#6b7280;
+      --background-color:#ffe5b4;
       --brand:#0f1b2d;         /* 深藍標頭 */
       --accent:#ff7a00;        /* 底部橘色條 */
       --primary:#0d6efd;       /* 主要按鈕 */
