--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
   <style>
     :root{
       color-scheme: light;
-      --bg:#ffa500;            /* 米色底 */
-      --card:#fff;             /* 卡片白 */
+      --bg:#ffa500;            /* 橘色底 */
+      --card:#ffe5b4;             /* 卡片淺橘 */
       --ink:#1f2937;           /* 文字 */
       --muted:#6b7280;
-      --background-color:#ffe5b4;
       --brand:#0f1b2d;         /* 深藍標頭 */
       --accent:#ff7a00;        /* 底部橘色條 */
       --primary:#0d6efd;       /* 主要按鈕 */
